loader z-index issues fixed

--- a/client-dev/less/page.work.less
+++ b/client-dev/less/page.work.less
@@ -350,6 +350,8 @@ body[class*="main_work"] {
 
       .projects-gallery-item-image-mask {
         display: block;
+        z-index: 2;
+        position: relative;
         width: 100%;
         height: 100%;
         background-position: 50% 0%;
